--- a/src/application/AdminMainWindow.fxml
+++ b/src/application/AdminMainWindow.fxml
@@ -6,10 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-	minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="controller.MainWindowController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Main">
    <top>
       <VBox prefHeight="85.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -23,7 +20,6 @@
                 <Menu mnemonicParsing="false" text="Edycja" />
                 <Menu mnemonicParsing="false" text="Pomoc">
                   <items>
-                  
                     <MenuItem mnemonicParsing="false" text="O programie" />
                   </items>
                 </Menu>
@@ -31,7 +27,7 @@
             </MenuBar>
             <HBox prefHeight="61.0" prefWidth="600.0" spacing="10.0" style="-fx-background-color: #336699;">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="134.0" text="Historia pobytu" />
+                  <Button mnemonicParsing="false" onAction="#HistoryDisplay" prefHeight="46.0" prefWidth="134.0" text="Historia pobytu" />
                   <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="46.0" prefWidth="134.0" text="Filtrowanie" />
                   <Region prefHeight="43.0" prefWidth="126.0" />
                   <Label alignment="CENTER" prefHeight="39.0" prefWidth="82.0" text="User" />
