--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -6,10 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-	minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="controller.MainWindowController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainWindowController">
    <top>
       <VBox prefHeight="85.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -34,7 +31,7 @@
                   <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="134.0" text="Historia pobytu" />
                   <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="46.0" prefWidth="134.0" text="Filtrowanie" />
                   <Region prefHeight="43.0" prefWidth="126.0" />
-                  <Label alignment="CENTER" prefHeight="39.0" prefWidth="82.0" text="User" />
+                  <Label fx:id="LblUzytkownik" alignment="CENTER" prefHeight="39.0" prefWidth="82.0" text="User" />
                   <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="48.0" prefWidth="108.0" text="Wyloguj" />
                </children>
                <padding>
