--- a/bin/application/HistoryClientWindow.fxml
+++ b/bin/application/HistoryClientWindow.fxml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TableView layoutY="-1.0" prefHeight="300.0" prefWidth="600.0">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainWindowController">
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="600.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button id="ButtonSave" fx:id="ButtonSave" mnemonicParsing="false" text="Drukuj" />
+            <Button id="ButtonPDF" fx:id="ButtonPDF" mnemonicParsing="false" text="Druk PDF" />
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </HBox>
+   </bottom>
+   <center>
+      <TableView id="toPrint" fx:id="toPrint" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn prefWidth="148.0" text="Data od" />
-          <TableColumn prefWidth="149.0" text="Data do" />
-            <TableColumn prefWidth="153.0" text="Numer pokoju" />
-            <TableColumn prefWidth="149.0" text="Cena" />
+          <TableColumn maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Data od" />
+          <TableColumn maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Data do" />
+            <TableColumn maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Numer pokoju" />
+            <TableColumn maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Cena" />
         </columns>
       </TableView>
-   </children>
-</Pane>
+   </center>
+</BorderPane>
