--- a/bin/application/RoomDetailsWindow.fxml
+++ b/bin/application/RoomDetailsWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RoomDetailsWindowController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
@@ -25,7 +25,7 @@
             </Label>
             <TextField prefHeight="32.0" prefWidth="103.0" promptText="rrrr-mm-dd" />
             <Button mnemonicParsing="false" prefHeight="39.0" prefWidth="96.0" text="Rezerwuj" />
-            <Button mnemonicParsing="false" prefHeight="39.0" prefWidth="96.0" text="Anuluj" />
+            <Button fx:id="anulujBTN" mnemonicParsing="false" prefHeight="39.0" prefWidth="96.0" text="Anuluj" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -49,12 +49,12 @@
       <VBox prefHeight="300.0" prefWidth="500.0" BorderPane.alignment="CENTER">
          <children>
             <Label prefHeight="39.0" prefWidth="91.0" />
-            <Label id="numerPokojuLbl" prefHeight="39.0" prefWidth="91.0" />
-            <Label id="liczbaOsobLbl" prefHeight="39.0" prefWidth="91.0" />
-            <Label id="czyDlaPalacychLbl" prefHeight="39.0" prefWidth="91.0" />
-            <Label id="czyZeZwierzetamiLbl" prefHeight="39.0" prefWidth="91.0" />
-            <Label id="jakiStandard" prefHeight="39.0" prefWidth="91.0" />
-            <Label id="cena" prefHeight="39.0" prefWidth="91.0" />
+            <Label fx:id="numerPokojuLbl" prefHeight="39.0" prefWidth="91.0" />
+            <Label fx:id="liczbaOsobLbl" prefHeight="39.0" prefWidth="91.0" />
+            <Label fx:id="czyDlaPalacychLbl" prefHeight="39.0" prefWidth="91.0" />
+            <Label fx:id="czyZeZwierzetamiLbl" prefHeight="39.0" prefWidth="91.0" />
+            <Label fx:id="jakiStandard" prefHeight="39.0" prefWidth="91.0" />
+            <Label fx:id="cena" prefHeight="39.0" prefWidth="91.0" />
          </children>
       </VBox>
    </right>
